# cure-lite

./: .gitignore  DATA_LOADING.md  README.md  STAGE.md  VALIDATION.md  __init__.py  calibration.py  config.py  controls.py  data.py  decoder.py  efficiency.py  frozen_base.py  intervention.py  matching.py  metrics.py  provenance.py  pyproject.toml  sampling.py  splits.py  stage_a.py  statistics.py  supervision.py  types.py
cache/: schema.py  state_cache.py
counterfactual/: __init__.py  acceptance.py  contracts.py  search.py  transforms.py
cure/: __init__.py  calibration.py  config.py  decoder.py  descriptors.py  efficiency.py  experiment.py  losses.py  model.py  propensity.py  protocol.py  source.py  supervision.py  training.py  types.py
cure_lite/: __init__.py  base_identity.py  benchmarks.py  calibration.py  calibration_ledger.py  config.py  data.py  decoder.py  efficiency.py  frozen_base.py  instances.py  intervention.py  losses.py  metrics.py  model.py  occupancy.py  provenance.py  sampling.py  stage_a.py  statistics.py  supervision.py
tests/: test_assess_stage_a_cli.py  test_base_at_budget_contract.py  test_build_irstd1k_manifest.py  test_calibration_ledger.py  test_counterfactual_acceptance.py  test_counterfactual_search.py  test_counterfactual_transform.py  test_cure_lite_toy_mechanism_gate.py  test_decoder_artifact.py  test_decoder_occupancy_projection.py  test_diagnose_stage_a_mechanism.py  test_efficiency_evidence.py  test_evaluation_pipeline.py  test_experiment_cache_pipeline.py  test_experiment_training_pipeline.py  test_factual_catalog.py  (+39 more)
(+79 files in other folders)
