[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cure-lite"
version = "0.1.0"
description = "Backbone-independent reference implementation of CURE-Lite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "safetensors>=0.4",
    "torch>=2.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cure_lite", "cure_lite.*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
